libdir = @gphx_module_lib_dir@

SUBDIRS = \
	libeffectv \
	effectvedgemodule \
	effectvagingmodule \
	effectvburnmodule \
	effectvcyclemodule \
	effectvdotmodule \
	effectvfiremodule \
	effectvlensmodule \
	effectvlifemodule \
	effectvpuzzlemodule \
	effectvquarkmodule \
	effectvsparkmodule \
	effectvspiralmodule \
	effectvbaltanmodule \
	effectvdizzymodule \
	effectvrndmmodule \
	effectvstreakmodule \
	effectvblurzoommodule \
	effectvmatrixmodule \
	effectvpupmodule \
	effectvscrollmodule \
	effectvtransformmodule \
	effectvchameleonmodule \
	effectvmosaicmodule \
	effectvrdsmodule \
	effectvshagadelicmodule \
	effectvwarholmodule \
	effectvdicemodule \
	effectvnervousmodule \
	effectvrevmodule \
	effectvsimuramodule \
	effectvwarpmodule \
	effectvdiffmodule \
	effectvnoisemodule \
	effectvripplemodule \
	effectvpredatormodule \
	effectvholomodule \
	effectv1dmodule
