noinst_LIBRARIES = libtestframework.a

EXTRA_DIST = TestFramework.vcproj TestFramework.dsp TestFramework.mak TestFramework.dep

libtestframework_a_SOURCES = \
		CompositeTest.cpp \
		LeafTest.cpp \
		Tester.cpp \
		easytest.cpp \
		easytest.h

noinst_HEADERS = \
		CompositeTest.h \
		easytest.h \
		LeafTest.h \
		Tester.h \
		Test.h



